--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -11,4 +11,6 @@
     <string name="before_yesterday">Before Yesterday</string>
     <string name="yesterday">Yesterday</string>
     <string name="today">Today</string>
+    <string name="settings_tittle">Settings</string>
+    <string name="dark_mode">Night theme</string>
 </resources>
