Lesson 3 updated - fixed bag with switching cameras

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -18,4 +18,6 @@
     <string name="Home">Home</string>
     <string name="next_button">Next Cam</string>
     <string name="button">Previous Cam</string>
+    <string name="Photo_number"> Photo №: </string>
+
 </resources>
