Lesson 3 changed tittle in menu

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -14,7 +14,7 @@
     <string name="settings_tittle">Settings</string>
     <string name="dark_mode">Night theme</string>
     <string name="Settings">Settings</string>
-    <string name="Explore">Explore</string>
+    <string name="Mars">Mars</string>
     <string name="Home">Home</string>
     <string name="next_button">Next Cam</string>
     <string name="button">Previous Cam</string>
